test/negative_cases/bad_regex.orderly
string /^((john)|(bob)|(susan)|(георги)|(цветанка)$/;
